[gd_scene format=3 uid="uid://dm7ya0ai3sps4"]

[ext_resource type="Script" uid="uid://ht0aoj0edvql" path="res://addons/cognite/editor/scripts/itens/perception_context_item.gd" id="1_tbpni"]
[ext_resource type="StyleBox" uid="uid://45k1jrxg4nlw" path="res://addons/cognite/assets/light_background.stylebox" id="2_ihtp0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6jnvs"]
content_margin_left = 0.0
content_margin_right = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxm0b"]
content_margin_left = 8.0
content_margin_right = 4.0
bg_color = Color(0.2408, 0.2604, 0.28, 0.588235)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="perception_context_item" type="PanelContainer" unique_id=899468730]
offset_right = 232.0
offset_bottom = 31.0
script = ExtResource("1_tbpni")

[node name="perception_item" type="VBoxContainer" parent="." unique_id=1182730049]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="perception_item" unique_id=1660572795]
layout_mode = 2

[node name="delete" type="Button" parent="perception_item/HBoxContainer" unique_id=932466536]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "x"

[node name="property_name" type="LineEdit" parent="perception_item/HBoxContainer" unique_id=1244994299]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Property:"

[node name="proper" type="HBoxContainer" parent="perception_item" unique_id=2078883585]
layout_mode = 2

[node name="Label" type="Label" parent="perception_item/proper" unique_id=629182643]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_6jnvs")
text = "property type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="perception_item/proper" unique_id=1373949298]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_ihtp0")

[node name="property_type" type="MenuButton" parent="perception_item/proper/PanelContainer" unique_id=1288786340]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
icon_alignment = 1
item_count = 5
popup/item_0/text = "boolean"
popup/item_0/id = 0
popup/item_1/text = "equal to"
popup/item_1/id = 1
popup/item_2/text = "less than"
popup/item_2/id = 2
popup/item_3/text = "more than"
popup/item_3/id = 3
popup/item_4/text = "between"
popup/item_4/id = 4

[node name="CheckButton" type="CheckButton" parent="perception_item/proper" unique_id=1595729867]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "set true"

[node name="LineEdit" type="LineEdit" parent="perception_item/proper" unique_id=15018788]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit2" type="LineEdit" parent="perception_item/proper" unique_id=271669519]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1597561337]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" unique_id=389880515]
layout_mode = 2

[node name="show_property" type="CheckButton" parent="VBoxContainer/HBoxContainer" unique_id=542365438]
layout_mode = 2
button_pressed = true
text = "Show"

[node name="property_name" type="Label" parent="VBoxContainer/HBoxContainer" unique_id=1054364063]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_bxm0b")
vertical_alignment = 1

[node name="delete" type="Button" parent="VBoxContainer/HBoxContainer" unique_id=1356506633]
custom_minimum_size = Vector2(30, 20)
layout_mode = 2
focus_mode = 0
text = "x"
icon_alignment = 1

[node name="proper" type="HBoxContainer" parent="VBoxContainer" unique_id=76960359]
layout_mode = 2

[node name="property_name" type="Label" parent="VBoxContainer/proper" unique_id=2115060081]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "string"
horizontal_alignment = 1
vertical_alignment = 1

[node name="boolean" type="CheckButton" parent="VBoxContainer/proper" unique_id=812115354]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "set true"

[node name="min" type="LineEdit" parent="VBoxContainer/proper" unique_id=1734679175]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Min:"

[node name="max" type="LineEdit" parent="VBoxContainer/proper" unique_id=1978998111]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Max:"

[node name="text" type="LineEdit" parent="VBoxContainer/proper" unique_id=827124282]
visible = false
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "String:"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/show_property" to="." method="_on_show_property_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/delete" to="." method="_on_delete_pressed"]
[connection signal="toggled" from="VBoxContainer/proper/boolean" to="." method="_on_check_button_toggled"]
[connection signal="text_changed" from="VBoxContainer/proper/min" to="." method="_on_min_text_changed"]
[connection signal="text_changed" from="VBoxContainer/proper/max" to="." method="_on_max_text_changed"]
[connection signal="text_changed" from="VBoxContainer/proper/text" to="." method="_on_text_text_changed"]
